--- a/oudfrontend/src/components/WebPlayer/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player.css
@@ -5,4 +5,23 @@
   position: fixed;
   min-width: 620px;
   height: 100px;
+  z-index: 4;
+}
+.now-playing-bar {
+  display: flex;
+  height: 90px;
+  padding: 16px;
+  box-sizing: border-box;
+}
+.now-playing-bar-left,
+.now-playing-bar-right {
+  width: 30%;
+  min-width: 180px;
+}
+.now-playing-bar-center {
+  width: 40%;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
