--- a/oudfrontend/src/components/WebPlayer/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player.css
@@ -41,3 +41,39 @@
   width: 20px;
   height: 20px;
 }
+.control-button.play img,
+.control-button.pause img {
+  width: 32px;
+  height: 32px;
+}
+.playback-bar {
+  display: flex;
+}
+.progress-time {
+  color: #a0a0a0;
+  font-size: 11px;
+  min-width: 40px;
+  text-align: center;
+}
+.progress-bar {
+  width: 100%;
+  height: 12px;
+  display: inline-flex;
+  cursor: pointer;
+  background-color: transparent;
+}
+.progress-bar-bg {
+  background-color: #404040;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+}
+.progress {
+  background-color: #ffce00;
+  height: 4px;
+  width: 0;
+  border-radius: 2px;
+}
+.playback-bar .progress-bar {
+  margin-top: 3px;
+}
