--- a/oudfrontend/src/components/WebPlayer/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player.css
@@ -27,6 +27,7 @@
 }
 .now-playing-bar .content {
   width: 100%;
+  height: 57px;
 }
 .player-controls .control-buttons {
   margin: 0 auto;
@@ -45,6 +46,7 @@
 .control-button.pause img {
   width: 32px;
   height: 32px;
+  cursor: pointer;
 }
 .playback-bar {
   display: flex;
@@ -76,4 +78,23 @@
 }
 .playback-bar .progress-bar {
   margin-top: 3px;
+}
+.now-playing-bar-left .album-art-work {
+  height: 100%;
+  max-width: 57px;
+  margin-right: 15px;
+  float: left;
+  background-size: cover;
+}
+.now-playing-bar-left .track-info {
+  display: table;
+}
+.now-playing-bar-left .track-info .track-name {
+  margin: 6px 0;
+  display: inline-block;
+  width: 100%;
+}
+.now-playing-bar-left .track-info .artist-name {
+  font-size: 12px;
+  color: #a0a0a0;
 }
