responsiveness for small screans

--- a/oudfrontend/src/index.css
+++ b/oudfrontend/src/index.css
@@ -12,3 +12,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* @media only screen and (max-width: 615px) {
+  .now-playing-bar-center {
+    width: 100%;
+  }
+  .now-playing-bar-left,
+  .now-playing-bar-right {
+    width: 0;
+  }
+} */
