--- a/oudfrontend/src/components/WebPlayer/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player.css
@@ -22,6 +22,14 @@
   position: relative;
   margin-top: 16px;
 }
+.now-playing-bar-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.now-playing-bar-left .content .player-controls {
+  margin-top: 6px;
+}
 .now-playing-bar-center {
   width: 40%;
   max-width: 700px;
@@ -33,9 +41,10 @@
   width: 100%;
   height: 57px;
 }
-.player-controls .control-buttons {
+.now-playing-bar-center .player-controls .control-buttons {
   margin: 0 auto;
-  display: table;
+  /* display: table; */
+  align-self: flex-end;
 }
 .control-button {
   background-color: transparent;
@@ -90,18 +99,22 @@
   float: left;
   background-size: cover;
 }
-.now-playing-bar-left .track-info {
-  display: table;
+.track-controls {
+  display: flex;
 }
-.now-playing-bar-left .track-info .track-name {
-  margin: 6px 0;
-  display: inline-block;
-  width: 100%;
+.now-playing-bar-center .track-info {
+  align-self: flex-start;
+  margin: 0 auto;
+  vertical-align: middle;
 }
-.now-playing-bar-left .track-info .artist-name {
+.now-playing-bar-center .track-info .track-name::after {
+  content: "  .  ";
+}
+.now-playing-bar-center .track-info .artist-name {
   font-size: 12px;
   color: #a0a0a0;
 }
+
 .volume-bar {
   width: 180px;
   position: absolute;
@@ -109,4 +122,25 @@
 }
 .volume-bar .progress-bar {
   width: 125px;
+}
+
+@media only screen and (max-width: 615px) {
+  .now-playing-bar-container {
+    min-width: 320px;
+  }
+  .now-playing-bar-left,
+  .now-playing-bar-right {
+    width: 0;
+    min-width: 0;
+    position: absolute;
+  }
+  .now-playing-bar-center {
+    width: 100%;
+  }
+  .now-playing-bar-left .album-art-work {
+    max-width: 0;
+  }
+  .now-playing-bar-left .track-info {
+    display: none;
+  }
 }
