--- a/oudfrontend/src/components/Playlist/playlist.css
+++ b/oudfrontend/src/components/Playlist/playlist.css
@@ -1,14 +1,15 @@
 .playlist{
     background-color: rgb(0,0,0);
-    padding: 0 32px;
+    padding: 30px 32px;
     color: #b3b3b3;
     position: relative;
-    
+    min-height: 800px;
 }
 
 .playlistHeader{
     margin-bottom: 20px;
     padding-bottom: 20px;
+    max-height: 340px;
 }
 
 .playlistHeaderBodyTop{
@@ -60,6 +61,9 @@
     background-color: #1db954;
     border: #1db954;
   }
+  .playButton:focus{
+      outline: none;
+  }
 
 .playlistHeaderBodyBottom{
     
@@ -69,25 +73,53 @@
     max-width: 320px;
     max-height: 320px;
     margin: 10px auto;    
-    border-radius: 100%;
+   
     width:100%;
 }
-.overlayer{
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
-    text-align: center;
-    visibility: hidden;
-}
 
-.playlistImageContainer:hover .overlayer{
-    visibility: visible;
-}
+
+
 .playlistImageContainer{
     position: relative;
     text-align:center;
+    max-height: 340px;
 
+}
+
+.playlist {
+    
+    font-family: "Helvetica Neue";
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background: rgb(125, 126, 125);
+    background: -moz-linear-gradient(
+      -45deg,
+      rgba(125, 126, 125, 1) 0%,
+      rgba(14, 14, 14, 1) 100%
+    );
+    background: -webkit-linear-gradient(
+      -45deg,
+      rgba(125, 126, 125, 1) 0%,
+      rgba(14, 14, 14, 1) 100%
+    );
+    background: linear-gradient(
+      135deg,
+      rgba(125, 126, 125, 1) 0%,
+      rgba(14, 14, 14, 1) 100%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=1 );
+    background-attachment: fixed;
+  }
+.likeIcon{
+    margin: 10px;
+    padding: 0px;
+    background-color: transparent;
+    border: none;
+}
+
+.likeIcon:focus{
+    outline: none;
 }
