--- a/oudfrontend/src/components/song/song.css
+++ b/oudfrontend/src/components/song/song.css
@@ -1,9 +1,20 @@
-.song{
-    
+.song{  
     height:64px;
     width: 100%;
+    padding: 9px 0;
+}
+h2{
+    padding:0;
 }
 
-.song :hover{
+
+.song:hover{
     background-color: rgba(50,60,60, .5);
+}
+
+.songInfo{
+    text-align: left;
+}
+.songChild:hover{
+    background-color: transparent;
 }
