--- a/oudfrontend/src/components/Home/Sidebar/Sidebar.css
+++ b/oudfrontend/src/components/Home/Sidebar/Sidebar.css
@@ -125,7 +125,7 @@
 .active-left-sidebar-ele:hover,
 .active-left-sidebar-ele:focus,
 .active-left-sidebar-ele:active {
-  border-left: 2px solid #f9b835;
+  border-left: 2px solid #916b49;
 }
 .bg-darky {
   background: #000;
