--- a/oudfrontend/src/Account/Components/AccountOverview/AccountOverview.css
+++ b/oudfrontend/src/Account/Components/AccountOverview/AccountOverview.css
@@ -53,8 +53,8 @@
   color: #f9b835;
 }
 .oudFree {
-  background-color: #ad28bd;
-  background-image: linear-gradient(#ad28bd, #9722b9);
+  background-color: #ffce00;
+  background-image: linear-gradient(#ffce00, #8c6747);
   color: #ffffff;
   padding: 70px 25px;
   border-top-left-radius: 10px;
