--- a/oudfrontend/src/components/Home/Navbar/Navbar.css
+++ b/oudfrontend/src/components/Home/Navbar/Navbar.css
@@ -4,20 +4,24 @@
   right: 0;
   left: 223px;
   z-index: 2;
+  /* height: 68px; */
 }
 .fa-angle-left:before {
   margin-right: 20px;
 }
+.oud-nav {
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
 
-.btn {
+.oud-btn {
   z-index: 2;
   border-style: solid;
   border-width: 2px;
   width: 150px;
-}
-.oud-btn {
   /* color: #f0a91a; */
   border: 2px solid #f0a91a;
+  transition: all 0.4s linear;
   border-radius: 80px !important;
   border-radius: 0.85rem;
 }
@@ -58,10 +62,12 @@ input.empty {
   overflow: hidden;
 }
 .left-arrow {
-  font-weight: 600;
+  /* font-weight: 600; */
+  font-size: 1.7em;
 }
 .right-arrow {
-  font-weight: 600;
+  /* font-weight: 600; */
+  font-size: 1.7em;
 }
 .left-arrow:hover {
   color: #f0a91a;
@@ -137,6 +143,7 @@ input.empty {
   margin-bottom: 0;
   font-weight: bold;
   margin-left: 7px;
+  color: white;
 }
 
 .dropdown-me {
