--- a/oudfrontend/src/components/WebPlayer/Queue/Queue.css
+++ b/oudfrontend/src/components/WebPlayer/Queue/Queue.css
@@ -175,6 +175,28 @@
   padding-top: 0.8em;
   margin-right: 2%;
 }
+.track .content .play-pause {
+  background: transparent;
+  border: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 3.5em;
+  height: 3.5em;
+  visibility: hidden;
+  border-radius: 0.3em;
+  box-shadow: 0px -1px 6px 2px #ffc107, 0 3px 17px 0 #d39e00;
+  z-index: 5;
+  float: left;
+  -moz-box-shadow: 0px -1px 6px 2px #ffc107, 0 3px 17px 0 #d39e00;
+  -webkit-box-shadow: 0px -1px 6px 2px #ffc107, 0 3px 17px 0 #d39e00;
+}
+.track .content .play-art {
+  position: relative;
+}
+.track .content .play-art:hover .play-pause {
+  visibility: visible;
+}
 @media screen and (max-width: 1030px) {
   .artist-name,
   .track-name {
