--- a/oudfrontend/src/components/song/song.css
+++ b/oudfrontend/src/components/song/song.css
@@ -1,10 +1,14 @@
 .song{  
     height:64px;
     width: 100%;
-    padding: 9px 0;
+    padding: 9px 0px;  
+    border: none;
+    background-color: transparent;
 }
-h2{
-    padding:0;
+#song:focus{
+    background-color: rgba(50,60,60, .5);
+    border: none;
+    outline: none;
 }
 #song:hover{
     background-color: rgba(50,60,60, .5);
@@ -17,13 +21,38 @@ h2{
     background-color: transparent;
 }
 .songButton{
-    
-    margin: 10px;
-    padding: 0px;
+    margin-bottom: 10px;
     background-color: transparent;
     border: none;
-
 }
 .songButton:focus{
     outline: none;
 }
+#songDropdownButton{
+    padding-bottom: 10px;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+}
+.dropdownContent {
+    position: fixed;
+    background-color: #f1f1f1/*#282828*/;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding: 5px 0px;
+    text-align: left;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdownContent .SongDropdownItem{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  /* Change color of dropdown links on hover */
+.dropdownContent .SongDropdownItem:hover {background-color: #ddd;}
+
